--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "leinadocar",
   "version": "0.1.0",
-  "homepage": "https://SInisterChil.github.io/doccar",
+  "homepage": "https://sumitthrita.github.io/leinadocar",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
